# alea

./: .clang-format  CMakeLists.txt
.github/workflows/: ubuntu.yml
CMake/: ClangFormatUtil.cmake
include/alea/: counter_engine.hpp  random.hpp  random_derivate.hpp  random_engine_mapper.hpp  threefry.hpp
include/alea/impl/: random_derivate_impl.hpp  random_engine_mapper_misc.hpp
tests/: random_perf.cpp  test_random.cpp
